--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/core": "^6.4.17",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-progress": "^5.0.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.5.0",
+    "react-native-vector-icons": "^10.1.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
